--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,13 +1,37 @@
 server {
     listen 80;
+    server_tokens off;
+
+    location /media/ {
+      proxy_set_header Host $http_host;
+      alias /media/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_pass http://backend:8000/api/;
+    }
+
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_pass http://backend:8000/admin/;
+  }
+
+    
     location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
+        alias /staticfiles/;
+        # root /usr/share/nginx/html;
+        # index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
