--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,22 +1,21 @@
 server {
-    listen 80;
     server_tokens off;
-
-    location /media/ {
-      proxy_set_header Host $http_host;
-      alias /media/;
-    }
+    listen 80;
 
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
 
+    location /media/ {
+        root /var/html;
+    }
+
     location /api/ {
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
-        proxy_pass http://backend:8000/api/;
+        proxy_pass http://backend:8000;
     }
 
     location /admin/ {
